@@ -2056,7 +2056,7 @@ static char const * device_name(char const * const type)
     return NULL;
   if (!strcmp(type, "sunau")) name = "/dev/audio";
   else if (!strcmp(type, "oss" ) || !strcmp(type, "ossdsp")) name = "/dev/dsp";
-  else if (!strcmp(type, "alsa") || !strcmp(type, "ao"))     name = "default";
+  else if (!strcmp(type, "alsa") || !strcmp(type, "ao") || !strcmp(type, "coreaudio")) name = "default";
   return name? from_env? from_env : name : NULL;
 }
 
@@ -2064,6 +2064,7 @@ static char const * set_default_device(file_t * f)
 {
   /* Default audio driver type in order of preference: */
   if (!f->filetype) f->filetype = getenv("AUDIODRIVER");
+  if (!f->filetype && sox_find_format("coreaudio", sox_false)) f->filetype = "coreaudio";
   if (!f->filetype && sox_find_format("alsa", sox_false)) f->filetype = "alsa";
   if (!f->filetype && sox_find_format("oss" , sox_false)) f->filetype = "oss";
   if (!f->filetype && sox_find_format("sunau",sox_false)) f->filetype = "sunau";
